# MarchMadness

./: .gitignore  README.md  TODO.md  config.yaml  pyproject.toml
data/: team_name_overrides.csv
data/raw/: bracket_2026.csv
output/: bracket.html  bracket_2026.csv  bracket_2026_real.csv  bracket_2026_real_structure.csv  bracket_2026_structure.csv  bracket_compact.json  bracket_data.json  pairwise_probs.json
src/: alternate_bracket.py  blend_sweep.py  bracket_scorecard.py  config.py  enhanced_model.py  enhanced_model_v2.py  enhanced_model_v3.py  generate_bracket.py  generate_bracket_real.py  iowa_impact.py  kaggle_submission.py  pool_optimizer.py  postmortem.py  run_pipeline.py
src/bracket/: __main__.py  line_blending.py  output.py  simulator.py  strategies.py
src/features/: __main__.py  efficiency.py  feature_matrix.py  feature_matrix_v2.py  four_factors.py  late_season.py
src/ingest/: __main__.py  build_tournament_results.py  cbbd_loader.py  kaggle2026_loader.py  kaggle_loader.py  massey_loader.py  team_mapping.py  validation.py
src/models/: __main__.py  baselines.py  evaluate.py  matchup.py  train.py  tuning.py
tests/: conftest.py  test_config.py  test_integration.py
tests/test_bracket/: test_line_blending.py  test_output.py  test_simulator.py  test_strategies.py
tests/test_features/: test_efficiency.py  test_feature_matrix.py  test_four_factors.py  test_late_season.py
tests/test_ingest/: test_cbbd_loader.py  test_kaggle_loader.py  test_massey_loader.py  test_team_mapping.py  test_validation.py
tests/test_models/: test_evaluate.py  test_train.py  (+2 more)
(+4 files in other folders)
